--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,25 @@ frontend_dashboard/.env.development.local
 frontend_dashboard/.env.test.local
 frontend_dashboard/.env.production
 
+# Terraform
+terraform/terraform.tfvars
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/*.tfstate
+terraform/*.tfstate.backup
+terraform/terraform.tfstate.d/
+terraform/.terraform.tfstate.lock.info
+terraform/crash.log
+terraform/override.tf
+terraform/override.tf.json
+terraform/*_override.tf
+terraform/*_override.tf.json
+
+# Environment variables (contains Supabase secrets)
+.env
+.env.local
+.env.*.local
+
 frontend_dashboard/npm-debug.log*
 frontend_dashboard/yarn-debug.log*
 frontend_dashboard/yarn-error.log*
